objects/ssot__AssetServiceAction__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__Address__c</fullName>
        <label>Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetServiceStatus__c</fullName>
        <label>Asset Service Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetServiceTypeIdentifier__c</fullName>
        <label>Asset Service Type Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetServiceType__c</fullName>
        <label>Asset Service Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedLifespanNumber__c</fullName>
        <label>Expected Lifespan</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedLifespanUOMId__c</fullName>
        <label>Expected Lifespan Unit of Measure</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedLifetimeUsageNumber__c</fullName>
        <label>Expected Lifetime Usage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedLifetimeUsageUOMId__c</fullName>
        <label>Expected Lifetime Usage Unit of Measure</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Asset Service Action Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InstallDateTime__c</fullName>
        <label>Install Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsGeneratedFromMaintenancePlan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Generated From Maintenance Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__ParentAssetId__c</fullName>
        <label>Parent Asset</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductCodeText__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductFamilyName__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductStockKeepingUnit__c</fullName>
        <label>Product Stock Keeping Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedRecordId__c</fullName>
        <label>Related Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedRecordObject__c</fullName>
        <label>Related Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceEndDateTime__c</fullName>
        <label>Service End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceStartDateTime__c</fullName>
        <label>Service Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TotalUsageQuantity__c</fullName>
        <label>Total Usage Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalUsageUnitOfMeasureId__c</fullName>
        <label>Total Usage Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1708941901065_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetServiceAction_ParentAssetId_map_rel</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>AssetServiceAction_ParentAssetId_map_rel</relationshipLabel>
        <relationshipName>rel_1708941901065_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1708941903156_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetServiceAction_AssetId_map_Asset_rel</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>AssetServiceAction_AssetId_map_Asset_rel</relationshipLabel>
        <relationshipName>rel_1708941903156_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1708941904602_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetServiceAction_CreatedById_map_U_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>AssetServiceAction_CreatedById_map_U_rel</relationshipLabel>
        <relationshipName>rel_1708941904602_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>